--- a/content/fireinput/tablemgr/installtable.html
+++ b/content/fireinput/tablemgr/installtable.html
@@ -38,7 +38,7 @@
 
 <script type="text/javascript">
 $(function() {
-   FireinputServerLogin.checkUserLogon();
+   Fireinput.serverLogin.checkUserLogon();
    FireinputTableMgr.initNetTableInstall();
    $('#topTabMenu').tabs({
 	fxSpeed: 'fast',
