fix js error; improve load performance

--- a/content/fireinput/emotionmgr/emotionmgr.html
+++ b/content/fireinput/emotionmgr/emotionmgr.html
@@ -10,6 +10,7 @@
 <meta name="keywords" content="Fireinput, IME, chinese, input method">
 <link href="chrome://fireinput/skin/jquery.tabs.css" rel="stylesheet" type="text/css" media="print, projection, screen">
 <link href="chrome://fireinput/skin/emotionmgr.css" rel="stylesheet" type="text/css">
+<script language="JavaScript" type="text/javascript" src="chrome://fireinput/content/ns.js"></script>
 <script language="JavaScript" type="text/javascript" src="chrome://fireinput/content/lib.js"></script>
 <script language="JavaScript" type="text/javascript" src="chrome://fireinput/content/utils.js"></script>
 <script language="JavaScript" type="text/javascript" src="chrome://fireinput/content/md5.js"></script>
