only support FF4 and beyond fix various html warnings

--- a/content/fireinput/emotionmgr/emotionmgr.html
+++ b/content/fireinput/emotionmgr/emotionmgr.html
@@ -58,7 +58,6 @@ $(function() {
           <span id="showAllFiles" class="textLink logonLink" onclick="Fireinput.emotionMgr.showMimeOrAll(false)">共享图案</span>
           <span id="showMyUpload">|<span class="textLink logonLink" onclick="Fireinput.emotionMgr.showMimeOrAll(true)">我的上传</span></span>
         </span>
-        </span>
         <span id="logonLink">|<span class="textLink logonLink" onclick="Fireinput.serverLogin.toggleLogonForm(event)">登录</span></span>
       </div>
  
@@ -100,7 +99,7 @@ $(function() {
 
      <br/>
      <div id="addFileHelp" style="text-align:left;padding-left: 5px;">
-       把图案的链接，例如 <span style="color: blue">"http://www.fireinput.com/emotions/flag/china.png"</span>, 放入下面的输入框。您所想加入的图案会自动显示在下面的方框内。然后点击"加入"按钮把它保存入网络图案菜单。如果您的图案不在网上，可以先上传</br> 
+       把图案的链接，例如 <span style="color: blue">"http://www.fireinput.com/emotions/flag/china.png"</span>, 放入下面的输入框。您所想加入的图案会自动显示在下面的方框内。然后点击"加入"按钮把它保存入网络图案菜单。如果您的图案不在网上，可以先上传<br/> 
      </div>
      <div style="margin-right: 3px">
         <div id="uploadForm" style="display:none; padding-left: 5px;">
