--- a/content/fireinput/tablemgr/tablemgr.html
+++ b/content/fireinput/tablemgr/tablemgr.html
@@ -197,7 +197,7 @@ $(function() {
                    <td colspan=2>
                      <div id="userInfoData" style="background-color: #E3CB9A; padding: 2px 0px 5px; font-size: 12px; display: none">
                       <table cellspacing=0 cellpadding=0>
-                      <tr><td colspan=2style="text-align:left">你还没有登录,在用游客的身份加新词: </td></tr>
+                      <tr><td colspan="2" style="text-align:left">你还没有登录,在用游客的身份加新词: </td></tr>
                       <tr><td style="text-align:right">游客笔名:</td><td><input name="realname" defvalue="" value="" /></td></tr>
                       <tr><td style="text-align:right">游客邮箱:</td><td><input _no_cjk_input="true" name="email" defvalue="" value=""/>(不会公开)</td></tr>
                      </table>
