fix review warnings

--- a/content/fireinput/color.html
+++ b/content/fireinput/color.html
@@ -36,7 +36,7 @@
            else
               this.style.border='2px dotted white'; 
 
-           document.getElementById("colorid").innerHTML = this.id; 
+           document.getElementById("colorid").textContent = this.id; 
       }
 
       function out()
