fix js error while doing parseHTML

--- a/content/fireinput/emotionmgr/emotionmgr.html
+++ b/content/fireinput/emotionmgr/emotionmgr.html
@@ -140,7 +140,7 @@ $(function() {
         <div id="paginatioplink" class="pagecontent"></div>
       </div>
       <div style="margin-left: 40px;">
-           <input type="button" id="updateButton" value="保存" onclick="Fireinput.emotionMgr.saveFileToList()"/>
+           <input type="button" id="updateButton" value="删除" onclick="Fireinput.emotionMgr.saveFileToList()"/>
            <span id="saveFileMessage" style="margin-left: 5px; color: green;"></span>
       </div>
     </div>
